# ggmath

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  ex.rs  rx.rs  sr.rs  verify.sh
bench_analyser/: Cargo.toml
bench_cmp/: Cargo.toml
benches/: bench_operator.rs  fvec2.rs  fvec3.rs  fvec4.rs  vec4f.rs  vec_ops.rs  vec_swizzle.rs
benchmarks/: Cargo.toml
codegen/: Cargo.toml
examples/: fixed_point.rsr  fixed_point_non_simd.rs  sandbox.rs
ggmath/: Cargo.toml
ggmath/benches/: vec_ops.rs
ggmath/src/: abs_diff.rs  alias_macros.rs  align.rs  builder.rs  construct.rs  crevice_.rs  dir.rs  lib.rs  primitive_aliases.rs  round.rs  serde_.rs  signed.rs  tests.rs
ggmath/src/aabb/: declaration.rs  generics.rs  hash.rs  mod.rs  ops.rs
ggmath/src/aabb/api/: from.rs  intersection.rs  mod.rs  properties.rs
ggmath/src/aabb/generics/: aabb_scalar.rs  alignment.rs  mod.rs  repr.rs  resolve.rs
ggmath/src/aabb/impl_std/: eq.rs  fmt.rs  hash.rs
ggmath/src/bounds/: mod.rs
ggmath/src/construct/: mod.rs
ggmath/src/integration/: mod.rs
ggmath/src/integration/crevice_/: matrix.rs  mod.rs  vector.rs
ggmath/src/integration/serde_/: deserialize.rs  mod.rs  serialize.rs
ggmath/src/intergration/: mod.rs
ggmath/src/intergration/crevice_/: matrix.rs  mod.rs  vector.rs
ggmath/src/line/: mod.rs
ggmath/src/matrix/: declaration.rs  default.rs  generics.rs  hash.rs  impl_std.rs  index.rs  major_axis.rs  mod.rs  new.rs  ops.rs  swizzle.rs
ggmath/src/matrix/api/: builder.rs  from.rs  get.rs  index_wrappers.rs  into_matrix.rs  mod.rs
ggmath/src/matrix/api_core/: convert.rs  get.rs  mod.rs  swizzle.rs
ggmath/src/matrix/core_api/: builder.rs  convert.rs  from.rs  get.rs  index_wrappers.rs  into.rs  mod.rs  new.rs
ggmath/src/matrix/generics/: alignment.rs  major_axis.rs  mod.rs  resolve.rs
ggmath/src/matrix/impl_std/: cmp.rs  copy.rs  debug.rs  display.rs  eq.rs  fmt.rs  hash.rs  index.rs  mod.rs  partial_eq.rs
ggmath/src/matrix/major_axis/: column_major.rs  mod.rs  row_major.rs
ggmath/src/primitives/: bool.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  maybe_uninit.rs  mod.rs  ordering.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
ggmath/src/quaternion/: conversion.rs  from_into.rs  generics.rs  mod.rs  new.rs  ops.rs
ggmath/src/ray/: mod.rs
ggmath/src/rect/: mod.rs
ggmath/src/rectangle/: impl_std.rs  mod.rs  repr.rs
ggmath/src/rectangle/api/: from.rs  intersection.rs  properties.rs
ggmath/src/rectangle/generics/: alignment.rs  mod.rs  rect_scalar.rs  repr.rs  resolve.rs  scalar.rs
ggmath/src/rectangle/impl_std/: copy.rs  debug.rs  display.rs  eq.rs  fmt.rs  hash.rs  mod.rs  partial_eq.rs
ggmath/src/rectangle/repr/: centered.rs  cornered.rs  min_maxed.rs  mod.rs
ggmath/src/scalar/: abs_diff.rs  cmp.rs  consts.rs  default.rs  mod.rs  ops.rs  positive_dir.rs  sign.rs
ggmath/src/scalar/api/: abs_diff.rs  cross.rs  csum.rs  dot.rs  mod.rs  round.rs  sign.rs  signed.rs
ggmath/src/scalar/impl_std/: cmp.rs  default.rs  mod.rs  ops.rs
ggmath/src/scalar/num/: mod.rs  num.rs
ggmath/src/scalar/primitive_impls/: bool.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
ggmath/src/scalar/primitive_impls/floats/: f32.rs  f64.rs  mod.rs
ggmath/src/scalar/primitive_impls/signed_ints/: i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  mod.rs
ggmath/src/scalar/primitive_impls/unsigned_ints/: mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
ggmath/src/scalar/wrapper/: mod.rs
ggmath/src/testing/: failed_fn.rs  matrix.rs  mod.rs  rectangle.rs  test_assert.rs  test_eq.rs  test_error.rs  test_scalar.rs  testable_scalar.rs
ggmath/src/vector/: alignment.rs  array.rs  builder.rs  conversion.rs  declaration.rs  fmt.rs  generics.rs  index.rs  inner.rs  iter.rs  iterator.rs  length.rs  mod.rs  new.rs  ops.rs  swizzle.rs
ggmath/src/vector/api/: array.rs  array_conversion.rs  builder.rs  get.rs  get_mut.rs  get_ref.rs  into_alignment.rs  into_vec.rs  mod.rs  or_scalar.rs  set.rs  splat.rs  swizzle_wrappers.rs
ggmath/src/vector/api_core/: builder.rs  convert.rs  get.rs  get_mut.rs  iter.rs  mod.rs  new.rs  splat.rs  swizzle.rs  swizzle_wrappers.rs
ggmath/src/vector/api_ext/: cmp.rs  mod.rs  ops.rs
ggmath/src/vector/api_primitives/: f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
ggmath/src/vector/core_api/: array_conversion.rs  as_bytes.rs  builder.rs  get.rs  get_mut.rs  get_ref.rs  mod.rs  or_scalar.rs  or_t.rs  set.rs  splat.rs  swizzle_wrappers.rs  with.rs
ggmath/src/vector/ext_api/: abs_diff.rs  csum.rs  dot.rs  length.rs  mod.rs  newnum.rs  round.rs
ggmath/src/vector/generics/: alignment.rs  length.rs  mod.rs  resolve.rs
ggmath/src/vector/impl_std/: array.rs  copy.rs  debug.rs  default.rs  display.rs  eq.rs  fmt.rs  index.rs  into_iter.rs  iter.rs  mod.rs  ops.rs  partial_eq.rs  scalar_ops.rs
ggmath/src/vector/interfaces/: core.rs  default.rs  mod.rs  ops.rs  test.rs
ggmath/src/vector/interfaces/api/: abs_diff.rs  mod.rs
ggmath/src/vector/interfaces/num/: mod.rs  num.rs
ggmath/src/vector/interfaces/std/: cmp.rs  default.rs  fmt.rs  mod.rs  ops.rs
ggmath/src/vector/newnum/: abs_diff.rs  constants.rs  floating.rs  min_max.rs  mod.rs  round.rs  sign.rs  trig.rs  whole.rs
ggmath/src/vector/num/: abs_diff.rs  cross.rs  floating.rs  min_max.rs  mod.rs  normalizable.rs  num.rs  round.rs  sign.rs  trig.rs  whole.rs
ggmath/tests/: vector_tests.rs
ggmath_bench_analyser/: Cargo.toml
ggmath_proc_macros/: Cargo.toml  README.md
ggmath_proc_macros/src/: lib.rs
ggmath_proc_macros/src/internal/: for_rhs_ops.rs  for_swizzles.rs  mod.rs
ggmath_testing/: Cargo.toml  README.md
ggmath_testing/src/: failed_fn.rs  lib.rs  result.rs  test_assert.rs  test_error.rs  test_scalar.rs  testable_scalar.rs  value_or_panic.rs
ggmath_tests/: Cargo.toml
macros/: Cargo.toml
sandbox/: Cargo.toml
sandbox/src/: main.rs
scripts/: test.rs
(+850 files in other folders)
