[package]
name = "ggmath"
version = "0.15.0"

categories = [
    "data-structures",
    "game-development",
    "graphics",
    "mathematics",
    "no-std",
]
edition = "2024"
keywords = ["math", "matrix", "simd", "vector"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Noam2Stein/ggmath"
rust-version = "1.90.0"

description = "A math library for games and graphics with support for generics and SIMD."

[features]
std = []

assertions = []
no-assertions = []

default = ["std"]

[dev-dependencies]
assert-impl-trait = "1.0.0"
colored = "3.1.1"
glam = "0.31.0"
gungraun = "0.17.0"
itertools = "0.14.0"

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "vector_f32"
path = "benches/vector/f32.rs"
harness = false
