[package]
name = "ggmath"
version = "0.15.0"

categories = [
    "data-structures",
    "game-development",
    "graphics",
    "mathematics",
    "no-std",
]
edition = "2024"
keywords = ["math", "matrix", "simd", "vector"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Noam2Stein/ggmath"
rust-version = "1.90.0"

description = "A math library for games and graphics with support for generics and SIMD."

[features]
std = []

assertions = []
no-assertions = []

default = ["std"]

bytemuck = ["dep:bytemuck"]
mint = ["dep:mint"]
serde = ["dep:serde"]

[dependencies]
bytemuck = { version = "1.24.0", optional = true }
mint = { version = "0.5.9", optional = true }
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
assert-impl-trait = "1.0.0"
colored = "3.1.1"
glam = "0.31.0"
gungraun = "0.17.0"
itertools = "0.14.0"
serde_json = "1.0.149"

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "vector_f32"
path = "benches/vector/f32.rs"
harness = false
