[package]
categories = [
    "data-structures",
    "game-development",
    "graphics",
    "mathematics",
]
description = "optimized generic-graphics-math"
edition = "2024"
license = "MIT"
name = "ggmath"
readme = "../README.md"
repository = "https://github.com/Noam2Stein/ggmath"
version = "0.10.0"

[features]
matrix            = [  ]
primitive_aliases = [  ]
quaternion        = [  ]

default = [ "matrix", "primitive_aliases", "quaternion" ]

aabb = [  ]

full = [ "aabb", "matrix", "primitive_aliases", "quaternion" ]

positive_backward = [  ]
positive_down     = [  ]
positive_forward  = [  ]
positive_left     = [  ]
positive_right    = [  ]
positive_up       = [  ]

[dependencies]
derive-where  = "1.2.7"
macro_loop    = "0.4.2"
splat_attribs = "1.0.0"

crevice = { version = "0.18.0", optional = true }
