[package]
categories = [
    "data-structures",
    "game-development",
    "graphics",
    "mathematics",
]
description = "optimized generic-graphics-math"
edition = "2024"
license = "MIT"
name = "ggmath"
readme = "../README.md"
repository = "https://github.com/Noam2Stein/ggmath"
version = "0.11.1"

[features]
matrix            = [  ]
primitive_aliases = [  ]
quaternion        = [  ]

default = [ "matrix", "primitive_aliases", "quaternion" ]

aabb = [  ]

full = [ "aabb", "matrix", "primitive_aliases", "quaternion" ]

[dependencies]
derive-where  = "1.2.7"
macro_loop    = "0.4.2"
splat_attribs = "1.0.0"

crevice = { version = "0.18.0", optional = true }
serde   = { version = "1.0.219", optional = true }

[dev-dependencies]
criterion = "0.7.0"
glam      = "0.30.5"

[profile.bench]
codegen-units = 1
debug         = false
inherits      = "release"
lto           = "fat"
opt-level     = 3

[[bench]]
harness = false
name    = "vec_ops"
