[package]
edition = "2024"
name    = "ggmath_bench_analyser"
version = "0.1.0"

[dependencies]
colored    = "2.0"
criterion  = "0.7.0"
ggmath     = { path = "../ggmath" }
glam       = "0.30.5"
macro_loop = "0.4.2"
regex      = "1.0"
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
walkdir    = "2.5"
