[package]
description = "proc-macros for the 'ggmath' crate"
edition     = "2021"
license     = "MIT"
name        = "ggmath_proc_macros"
readme      = "README.md"
version     = "0.1.4"

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.2.0"
is_sorted        = "0.1.1"
proc-macro2      = "1.0.86"
quote            = "1.0.37"
syn              = { version = "2.0.79", features = [ "extra-traits", "full" ] }
