[package]
edition = "2024"
name    = "sandbox"
version = "0.1.0"

[dependencies]
crevice = "0.18.0"
derive_more = { version = "2.0.1", features = [ "full" ] }
ggmath = { path = "../ggmath", features = [
    "backward",
    "crevice",
    "down",
    "forward",
    "full",
    "left",
    "right",
    "serde",
    "up",
] }
